puppet/parser/example/error/github/raw.githubusercontent.com/wcpro/Scaffeine/89f58fd51097a098c1dacce13400df5091de006f/src/Scaffeine.Offers.Manager/content/Offers/OffersController.cs.pp
using System.Web.Mvc;

namespace $rootnamespace$.Controllers.Offers
{
    using $rootnamespace$.Core.Model;

    public class OffersController : Controller
    {
        public ActionResult Record()
        {
            return this.View();
        }

		public ActionResult Manager()
        {
            return this.View();
        }
    }
}
